--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+<style>
+  .replyCount:hover,.addReply:hover{
+    cursor: pointer;
+  }
+  .replyContent:hover{
+    cursor: pointer;
+    background-color: lightgray;
+  }
+
+</style>
 <th:block th:replace="~{/layout/basic :: setContent('Board Read',~{this::content})}">
   <th:block th:fragment="content">
     <h1 class="mt-4">Board Read Page</h1>
@@ -92,7 +102,7 @@
             $(".replyCount").html(" Reply Count  " + arr.length);
             $.each(arr,function (idx,reply){
               //console.log(reply);
-              str += '    <div class="card-body" data-rno="'+reply.rno+'"><b>'+reply.rno+'</b>';
+              str += '    <div class="card-body replyContent" data-rno="'+reply.rno+'"><b>'+reply.rno+'</b>';
               str += '    <h5 class="card-title">'+reply.text+'</h5>';
               str += '    <h6 class="card-subtitle mb-2 text-muted">'+reply.replyer+'</h6>';
               str += '    <p class="card-text">'+formatTime(reply.regDate)+'</p>';
@@ -158,8 +168,47 @@
         }); //replyList click --- end
 
         $(".replyRemove").on("click",function (){
-          alert("replyRemove click!");
+          //alert("replyRemove click!");
+          let rno = $("input[name='rno']").val();
+          console.log(rno);
+          $.ajax({
+            url: '/replies/'+rno,
+            method: 'delete',
+            success: function (result){
+              console.log("result : " + result);
+              if(result === 'success'){
+                alert("댓글이 삭제 되었습니다");
+                replyModal.modal('hide');
+                loadJSONData();
+              }
+            }
+          });// ajax --- end
         }); // replyRemove click --- end
+
+        $(".replyModify").click(function (){
+          let rno = $("input[name='rno']").val();
+          let reply={
+            rno: rno,
+            bno: bno,
+            text: $('input[name="replyText"]').val(),
+            replyer: $('input[name="replyer"]').val()
+          }
+          console.log(reply);
+          $.ajax({
+            url: '/replies/' + rno,
+            method: 'put',
+            data: JSON.stringify(reply),
+            contentType: 'application/json; charset=UTF-8',
+            success: function (result){
+              console.log("result : " + result);
+              if(result === 'success'){
+                alert("댓글이 수정되었습니다");
+                replyModal.modal('hide');
+                loadJSONData();
+              }
+            }
+          });// ajax --- end
+        }) // replyModify click --- end
 
       }) //document ready --- end
     </script>
